--- a/alton_music/ofertas.html
+++ b/alton_music/ofertas.html
@@ -29,7 +29,7 @@
   <!-- SECCIÓN SERVICIOS -->
   <section id="servicios">
     <div class="contenedorImagen">
-      <img class="imagenEncabezadoOferta" src="../multimedia/ofertas.png" alt="foto de instrumentos" />
+      <img class="imagenEncabezadoOferta" src="../multimedia/Banner.jpg" alt="foto de instrumentos" />
     </div>
 
     <!-- Menu de Ofertas -->
