--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- EL HEADER LO VAMOS A MAQUETAR CON FLEXBOX -->
   <header>
     <div>
-      <a href="./index.html"><img class="logo" src="./multimedia/alton-removeb.png" alt="Logo de alton" /></a>
+      <a href="./index.html"><img class="logo" src="./multimedia/alton logo banner.svg" alt="Logo de alton" /></a>
     </div>
     <h1>Alton Music</h1>
     <nav class="botonera">
