--- a/alton_music/ofertas.html
+++ b/alton_music/ofertas.html
@@ -16,7 +16,7 @@
 <body>
   <header>
     <div>
-      <a href="../index.html"><img class="logo" src="../multimedia/alton-removeb.png" alt="Logo de alton" /></a>
+      <a href="../index.html"><img class="logo" src="./multimedia/alton logo banner.svg" alt="Logo de alton" /></a>
     </div>
     <h1>Alton Music</h1>
     <nav class="botonera">
@@ -45,7 +45,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">OFERTA SEMANAL</a>
+              <a class="nav-link active" aria-current="page" href="./ofertasemanal.html">OFERTA SEMANAL</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">OUTLET</a>
@@ -107,18 +107,12 @@
     </div>
     <!--Fin   Tarjetas-->
 
-
-    
-
     <!-- BOTON DE WHATSAPP -->
     <div class="botonWhatsApp">
-
       <img src="../multimedia/whatsapp.png" alt="boton-whatsapp" />
-
     </div>
 
     <!-- SECCIÓN FOOTER -->
-
     <footer class="footer">
       <div class="footer-sm">
         <div class="container">
