--- a/index.html
+++ b/index.html
@@ -62,20 +62,13 @@
     </button>
   </div>
   <div class="contenedor">
-    <h2>Nosotros</h2>
+    <h2><u>Nosotros</u></h2>
     <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
-      nulla qui, animi deserunt obcaecati voluptates placeat! Provident
-      itaque, assumenda nulla aliquid placeat sapiente ullam recusandae
-      minima autem culpa porro dolore ducimus eaque sed quibusdam cum
-      voluptates ab eos quisquam dignissimos asperiores consectetur sunt
-      doloribus magni. Non, mollitia inventore? Asperiores similique, modi
-      atque minima nostrum veritatis aperiam qui ex mollitia, molestias
-      quaerat iusto cupiditate. Tempora earum quasi consequuntur
-      reprehenderit voluptatum omnis adipisci aspernatur magnam. Assumenda
-      sunt quidem fugit commodi doloremque perspiciatis dolor facere cum
-      repellat a, id recusandae doloribus nemo illo numquam soluta quos, non
-      explicabo voluptatibus eum rerum inventore quasi!
+ <strong><i>Alton Music</i></strong> es una casa de música líder en instrumentos musicales y equipamiento de audio profesional. 
+Disponemos de una amplia variedad de productos en nuestro catálogo, desde instrumentos de orquesta y estudio, hasta guitarras, baterías, pianos digitales, saxofones y ukeleles, además de equipos de grabación y microfonía líderes en el mercado.
+Desde guitarras criollas para principiantes hasta micrófonos y amplificadores profesionales, la tienda de instrumentos musicales online Baires Rocks dispone de una amplia gama de equipamiento musical. 
+No importa si lo que buscas es un micrófono, un teclado musical, una batería electrónica o un bajo eléctrico, siempre te daremos asesoramiento en lo que necesites. 
+Tenemos algunas de las marcas más populares en stock, tales como Fender, Roland, Casio, Marshall, Ibanez, Behringer y Shure, sin olvidar que somos distribuidores oficiales Yamaha para instrumentos musicales y audio en Argentina.
     </p>
   </div>
   </section>
@@ -85,15 +78,26 @@
   <section id="galeria">
     <div class="contenedor">
       <h3>Todo lo buscas esta aca</h3>
-      <p>Amplificadores, Baterias, Pedaleras, Teclados, Electronica, audio y video</p>
+      <p> <strong> Amplificadores, Baterias, Pedaleras, Teclados, Electronica, audio y video</strong></p>
 
       <div class="gridPadre">
-        <img class="imagenGaleria imagenUno" src="./multimedia/aplificadores.jpg" alt="amplificadores" />
-        <img class="imagenGaleria imagenDos" src="./multimedia/electronica.jpg" alt="electronica" />
-        <img class="imagenGaleria imagenTres" src="./multimedia/bateria-y-percucion.jpg" alt="bateria-y-percucion" />
-        <img class="imagenGaleria imagenCuatro" src="./multimedia/guitarra.jpg" alt="guitarra" />
-        <img class="imagenGaleria imagenCinco" src="./multimedia/pedaleras.jpg" alt="pedaleras" />
-        <img class="imagenGaleria imagenSeis" src="./multimedia/teclados.jpg" alt="teclados" />
+        <a href="https://www.altonmusic.com/instrumentos/instrumentos-cuerdas/#applied_filter_id%3Dcategory%26applied_filter_name%3DCategor%C3%ADas%26applied_filter_order%3D3%26applied_value_id%3DMLA4611%26applied_value_name%3DInstrumentos+de+Cuerdas%26applied_value_order%3D4%26applied_value_results%3D472%26is_custom%3Dfalse" target="_blank">
+          <img class="imagenGaleria imagenUno" src="./multimedia/aplificadores.jpg" alt="amplificadores" /></a>
+          
+        <a href="https://www.altonmusic.com/electronica/" target="blank">
+          <img class="imagenGaleria imagenDos" src="./multimedia/electronica.jpg" alt="electronica" /></a>
+
+        <a href="https://www.altonmusic.com/instrumentos/baterias-percusion/#applied_filter_id%3Dcategory%26applied_filter_name%3DCategor%C3%ADas%26applied_filter_order%3D3%26applied_value_id%3DMLA3024%26applied_value_name%3DBater%C3%ADas+y+Percusi%C3%B3n%26applied_value_order%3D1%26applied_value_results%3D196%26is_custom%3Dfalse" target="blank">
+          <img class="imagenGaleria imagenTres" src="./multimedia/bateria-y-percucion.jpg" alt="bateria-y-percucion" /></a>
+
+        <a href="https://www.altonmusic.com/instrumentos/instrumentos-cuerdas/#applied_filter_id%3Dcategory%26applied_filter_name%3DCategor%C3%ADas%26applied_filter_order%3D3%26applied_value_id%3DMLA4611%26applied_value_name%3DInstrumentos+de+Cuerdas%26applied_value_order%3D4%26applied_value_results%3D472%26is_custom%3Dfalse" target="blank">
+          <img class="imagenGaleria imagenCuatro" src="./multimedia/guitarra.jpg" alt="guitarra" /></a>
+
+        <a href="https://www.altonmusic.com/instrumentos/pedales-accesorios/#applied_filter_id%3Dcategory%26applied_filter_name%3DCategor%C3%ADas%26applied_filter_order%3D3%26applied_value_id%3DMLA434786%26applied_value_name%3DPedales+y+Accesorios%26applied_value_order%3D10%26applied_value_results%3D74%26is_custom%3Dfalse" target="blank">
+          <img class="imagenGaleria imagenCinco" src="./multimedia/pedaleras.jpg" alt="pedaleras" /></a>
+
+        <a href="https://www.altonmusic.com/instrumentos/teclados-pianos/#applied_filter_id%3Dcategory%26applied_filter_name%3DCategor%C3%ADas%26applied_filter_order%3D3%26applied_value_id%3DMLA2100%26applied_value_name%3DTeclados+y+Pianos%26applied_value_order%3D11%26applied_value_results%3D200%26is_custom%3Dfalse" target="blank">
+          <img class="imagenGaleria imagenSeis" src="./multimedia/teclados.jpg" alt="teclados" /></a>
 
       </div>
     </div>
@@ -104,8 +108,7 @@
   </div>
 
   <!-- SECCIÓN FOOTER -->
-
-  <footer class="footer">
+    <footer class="footer">
     <div class="footer-sm">
       <div class="container">
         <div class="row footer-up">
