--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- EL HEADER LO VAMOS A MAQUETAR CON FLEXBOX -->
   <header>
     <div>
-      <a href="./index.html"><img class="logo" src="./multimedia/alton logo banner.svg" alt="Logo de alton" /></a>
+      <a href="./index.html"><img class="logo" src="./multimedia/alton-removeb.png" alt="Logo de alton" /></a>
     </div>
     <h1>Alton Music</h1>
     <nav class="botonera">
@@ -112,22 +112,25 @@ Tenemos algunas de las marcas más populares en stock, tales como Fender, Roland
     <div class="footer-sm">
       <div class="container">
         <div class="row footer-up">
-          <div class="col">Buscanos en las redes</div>
+          <div class="col">Buscanos en las redes           
+          </div>                
           <div class="col">
             <a href="https://es-la.facebook.com/"><i class="fab fa-facebook"></i></a>
             <a href="https://twitter.com/?lang=es"><i class="fab fa-twitter"></i></a>
             <a href="https://www.instagram.com/?hl=es-la"><i class="fab fa-instagram"></i></a>
+            <p>ventas@altonmusic.com</p>
           </div>
         </div>
         <div class="footer-bottom">
           <div class="container">
             <div class="row footer-copy">
-              <div class="col">
-                &copy; Copyright 2021 <a href="#">AltonMusic</a> | Creada por <a href="#">REM</a>
+              <div class="col3">
+                &copy; Copyright 2021 <a href="#">AltonMusic</a> | Creada por <a href="https://github.com/Robydan" target="blank">REM</a>
               </div>
             </div>
           </div>
         </div>
+        
   </footer>
   <!-- iconos font awason -->
   <script src="https://kit.fontawesome.com/a4397840eb.js" crossorigin="anonymous"></script>
