correcion del index y contactos

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ Tenemos algunas de las marcas más populares en stock, tales como Fender, Roland
             <a href="https://es-la.facebook.com/"><i class="fab fa-facebook"></i></a>
             <a href="https://twitter.com/?lang=es"><i class="fab fa-twitter"></i></a>
             <a href="https://www.instagram.com/?hl=es-la"><i class="fab fa-instagram"></i></a>
-            <p>ventas@altonmusic.com</p>
+            <p class="ventas">ventas@altonmusic.com</p>
           </div>
         </div>
         <div class="footer-bottom">
