--- a/alton_music/contacto.html
+++ b/alton_music/contacto.html
@@ -66,9 +66,9 @@
                 <div class="row footer-up">
                     <div class="col">Buscanos en las redes</div>
                     <div class="col">
-                        <a href="https://es-la.facebook.com/"><i class="fab fa-facebook"></i></a>
-                        <a href="https://twitter.com/?lang=es"><i class="fab fa-twitter"></i></a>
-                        <a href="https://www.instagram.com/?hl=es-la"><i class="fab fa-instagram"></i></a>
+                        <a href="https://es-la.facebook.com/" target="blank"><i class="fab fa-facebook"></i></a>
+                        <a href="https://twitter.com/?lang=es" target="blank"><i class="fab fa-twitter"></i></a>
+                        <a href="https://www.instagram.com/?hl=es-la" target="blank"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
                 <div class="footer-bottom">
