--- a/alton_music/ofertas.html
+++ b/alton_music/ofertas.html
@@ -1,148 +1,21 @@
-<!DOCTYPE html>
-<html lang="es">
-
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Alton Music</title>
-  <!-- Agregando BOOTSTRAP CDN -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link rel="stylesheet" href="../css/style.css" />
-  <link rel="stylesheet" href="../css_sass/estilos.css">
-</head>
-
-<body>
-  <header>
-    <div>
-      <a href="../index.html"><img class="logo" src="./multimedia/alton logo banner.svg" alt="Logo de alton" /></a>
-    </div>
-    <h1>Alton Music</h1>
-    <nav class="botonera">
-      <ul>
-        <li><a class="btnInicio" href="./contacto.html">Contacto</a></li>
-        <li><a class="btnInicio" href="../index.html">Inicio</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <!-- SECCIÓN SERVICIOS -->
-  <section id="servicios">
-    <div class="contenedorImagen">
-      <img class="imagenEncabezadoOferta" src="../multimedia/Banner.jpg" alt="foto de instrumentos" />
-    </div>
-
-    
-    <!-- BOOSTRAP NAVEGACION -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="./maspopulares.html">MAS POPULARES</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./ofertasemanal.html">OFERTA SEMANAL</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">OUTLET</a>
-            </li>
-
-            <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-        </div>
-      </div>
-    </nav>
-    <!-- Tarjetas de productos -->
-    <div class="title-cards">
-       </div>
-    <div class="container-card">
-      <div class="card">
-        <figure>
-          <a href="https://www.altonmusic.com/MLA-898168984-amplificador-vox-cambridge50-nutube-celestion-_JM?searchVariation=68927494170#searchVariation=68927494170&position=2&search_layout=stack&type=item&tracking_id=8a44c99b-a906-4d8b-9f11-6928c40edb8a" target="_blank">
-          <img src="../multimedia/ofertas/amplificador-vox.png"></a>
-        </figure>
-        <div class="contenido-card">
-          <h4>Amplificador Vox Cambridge50 Nutube Celestion</h4>
-          <p>VOX Cambridge50
-            Equipado una válvula Nutube, para una verdadera distorsión valvular, y una caja equipada con un parlante Celestion de 12".
-            El amplificador tiene un diseño simple que le permite llegar fácilmente al sonido, o guardar tus presets favoritos como preajustes.
-            Con 11 tipos de modelos de amplificador, 8 efectos integrados y un afinador integrado, este amplificador es perfecto para muchas aplicaciones y cualquier estilo de música.</p>
-          <a href="https://www.altonmusic.com/MLA-898168984-amplificador-vox-cambridge50-nutube-celestion-_JM?searchVariation=68927494170#searchVariation=68927494170&position=2&search_layout=stack&type=item&tracking_id=8a44c99b-a906-4d8b-9f11-6928c40edb8a"target="_blank">Leer Màs</a>
-        </div>
-      </div>
-      <div class="card">
-        <figure>
-          <a href="https://www.altonmusic.com/MLA-903823132-funda-guitarra-acustica-madarozzo-elegant-g0030-dreadnought-_JM?searchVariation=72743138199#searchVariation=72743138199&position=4&search_layout=stack&type=item&tracking_id=8a44c99b-a906-4d8b-9f11-6928c40edb8a" target="_blank">
-          <img src="../multimedia/ofertas/funda-guitarra.png"></a>
-        </figure>
-        <div class="contenido-card">
-          <h4>Funda Guitarra Acústica Madarozzo Elegant G0030 Dreadnought</h4>
-          <p>Madarozzo Elegant G0030 Dreadnought
-            Una impresionante fusión de diseño, función y protección para el músico exigente.
-            Elección ideal para el músico que se inicia.
-            Su estilo único, colores, funcionalidad y características hacen de este modelo la funda que "deben tener" todos los guitarristas, excelente en calidad y precio.
-            </p>
-          <a href="https://www.altonmusic.com/MLA-903823132-funda-guitarra-acustica-madarozzo-elegant-g0030-dreadnought-_JM?searchVariation=72743138199#searchVariation=72743138199&position=4&search_layout=stack&type=item&tracking_id=8a44c99b-a906-4d8b-9f11-6928c40edb8a"target="_blank">Leer Màs</a>
-        </div>
-      </div>
-      <div class="card">
-        <figure>
-          <a href="https://www.altonmusic.com/MLA-908149616-guitarra-electrica-les-paul-vintage-v100-hardware-dorado-_JM?searchVariation=76097611976#searchVariation=76097611976&position=5&search_layout=stack&type=item&tracking_id=8a44c99b-a906-4d8b-9f11-6928c40edb8a" target="_blank">
-          <img src="../multimedia/ofertas/Guitar-LesPaul.png"></a>
-        </figure>
-        <div class="contenido-card">
-          <h4>Guitarra Eléctrica Les Paul Vintage V100 Hardware Dorado</h4>
-          <p>Vintage V100
-            La Les Paul Vintage V100 en su sonido tiene el corazón y el alma de miles de conciertos y puedes sentirlo cuando lo tocas.
-            Estas guitarras fantásticas, totalmente equipadas con hardware y micrófonos Wilkinson están listas para el próximo concierto.</p>
-          <a href="https://www.altonmusic.com/MLA-908149616-guitarra-electrica-les-paul-vintage-v100-hardware-dorado-_JM?searchVariation=76097611976#searchVariation=76097611976&position=5&search_layout=stack&type=item&tracking_id=8a44c99b-a906-4d8b-9f11-6928c40edb8a"target="_blank">Leer Màs</a>
-        </div>
-      </div>
-    </div>
-    <!--Fin   Tarjetas-->
-
-    <!-- BOTON DE WHATSAPP -->
-    <div class="botonWhatsApp">
-      <img src="../multimedia/whatsapp.png" alt="boton-whatsapp" />
-    </div>
-
-    <!-- SECCIÓN FOOTER -->
-    <footer class="footer">
-      <div class="footer-sm">
-        <div class="container">
-          <div class="row footer-up">
-            <div class="col">Buscanos en las redes</div>
-            <div class="col">
-              <a href="https://es-la.facebook.com/"><i class="fab fa-facebook"></i></a>
-              <a href="https://twitter.com/?lang=es"><i class="fab fa-twitter"></i></a>
-              <a href="https://www.instagram.com/?hl=es-la"><i class="fab fa-instagram"></i></a>
-            </div>
-          </div>
-          <div class="footer-bottom">
-            <div class="container">
-              <div class="row footer-copy">
-                <div class="col">
-                  &copy; Copyright 2021 <a href="#">AltonMusic</a> | Creada por <a href="#">REM</a>
-                </div>
-              </div>
-            </div>
-          </div>
-    </footer>
-    <!-- iconos font awason -->
-    <script src="https://kit.fontawesome.com/a4397840eb.js" crossorigin="anonymous"></script>
-    <!-- Libreria popperJS x CDN -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-      integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-      crossorigin="anonymous"></script>
-
-    <!-- JS con instalacion -->
-    <script src="../js/bootstrap.min.js"></script>
-</body>
-
-</html>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Alton Music</title>
+    <!-- Agregando BOOTSTRAP CDN -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css_sass/estilos.css" />
+    <link rel="stylesheet" href="./css/style.css">
+  </head><head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Alton Music</title>
+    <!-- Agregando BOOTSTRAP CDN -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css_sass/estilos.css" />
+    <link rel="stylesheet" href="./css/style.css">
+  </head>
