--- a/alton_music/maspopulares.html
+++ b/alton_music/maspopulares.html
@@ -12,6 +12,7 @@
   <!-- CDN de Icon -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
   <link rel="stylesheet" href="../css/style.css" />
+  <link rel="stylesheet" href="../css_sass/estilos.css">
 </head>
 
 <body>
