--- a/alton_music/ofertas.html
+++ b/alton_music/ofertas.html
@@ -9,46 +9,36 @@
   <!-- Agregando BOOTSTRAP CDN -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
- <link rel="stylesheet" href="../css/style.css">
- <link rel="stylesheet" href="../css_sass/estilos.css">
+ <link rel="stylesheet" href="../css_sass/style.css">
 </head>
 <header>
   <div>
-    <a href="./index.html"><img class="logo" src="./multimedia/alton-removeb.png" alt="Logo de alton" /></a>
+    <a href="./index.html"><img class="logo" src="../multimedia/alton-removeb.png" alt="Logo de alton" /></a>
   </div>
   <h1>Alton Music</h1>
   <nav class="botonera">
     <ul>
       <li><a class="btnInicio" href="./alton_music/contacto.html">Contacto</a></li>
       <li><a class="btnInicio" href="./alton_music/ofertas.html">Ofertas</a></li>
+      <li><a class="btnInicio" href="../index.html">Inicio</a></li>
     </ul>
   </nav>
 </header>
   <body>
-    <!-- BOOSTRAP NAVEGACION -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="./maspopulares.html">MAS POPULARES</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./ofertasemanal.html">OFERTA SEMANAL</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">OUTLET</a>
-            </li>
+    <!-- banner de ofertas -->
+    <div class="bannerOferta">
+    <img src="../multimedia/ofertas.png"  alt="banner de ofertas">
+  </div>
+    <!-- fin del banner -->
 
-            <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-        </div>
-      </div>
-    </nav>
+    <!-- BOOSTRAP NAVEGACION
+    <nav class="navbar navbar-light bg-light">
+      <form class="container-fluid justify-content-start">
+        <button class="btn btn-outline-success me-2" type="button">Mas Populares</button>
+        <button class="btn btn-sm btn-outline-secondary" type="button">Pagos sin interes</button>
+      </form>
+    </nav> -->
+    
     <!-- Tarjetas de productos -->
     <div class="title-cards">
     </div>
