correcciones en ofertas

--- a/alton_music/ofertas.html
+++ b/alton_music/ofertas.html
@@ -30,18 +30,18 @@
 <section class="navOfertas">
 <nav class="nav">  
   <ul class="nav-menu">
-    <li class="nav-menu-item">
-      <a href="#" class="nav-menu-link nav-link">Blog</a>
+        <li class="nav-menu-item">
+      <a href="../index.html" class="nav-menu-link nav-link">INICIO</a>
     </li>
     <li class="nav-menu-item">
-      <a href="#" class="nav-menu-link nav-link">Videos</a>
+      <a href="./maspopulares.html" class="nav-menu-link nav-link">MAS POPULARES</a>
     </li>
     <li class="nav-menu-item">
-      <a href="#" class="nav-menu-link nav-link">Sobre mí</a>
+      <a href="./sininteres.html" class="nav-menu-link nav-link">PAGOS SIN INTERES</a>
     </li>
     <li class="nav-menu-item">
-      <a href="#" class="nav-menu-link nav-link nav-menu-link_active"
-        >Contacto</a>
+      <a href="./outlet.html" class="nav-menu-link nav-link "
+        >OUTLET</a>
     </li>
   </ul>
 </nav>
