corrigiendo media query

--- a/alton_music/ofertas.html
+++ b/alton_music/ofertas.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="../css_sass/style.css">
 </head>
 <header>
-  <div>
+  <div class="contenedor-logo">
     <a href="./index.html"><img class="logo" src="../multimedia/alton-removeb.png" alt="Logo de alton" /></a>
   </div>
 
