--- a/alton_music/ofertas.html
+++ b/alton_music/ofertas.html
@@ -11,43 +11,59 @@
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="../css_sass/style.css">
 </head>
-<header>
-  <div class="contenedor-logo">
-    <a href="./index.html"><img class="logo" src="../multimedia/alton-removeb.png" alt="Logo de alton" /></a>
-  </div>
-
-  <h1>Alton Music</h1>
-
-</header>
 
 <body>
+  <!-- HEADER + MENU NAVBAR -->
+  <header>
+  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e7f045;">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="../index.html">
+        <img class="logoDeOferta" src="../multimedia/alton-removeb.png" alt="logo de alton">
+      </a>
+      <h1 class="tituloDeOferta">ALTON MUSIC</h1>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./sininteres.html">Pagos sin Interes</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+              aria-expanded="false">
+              Mas Populares
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="#">Guitarras</a></li>
+              <li><a class="dropdown-item" href="#">Baterias</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" href="#">Teclados</a></li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./outlet.html">OUTLET</a>
+          </li>
+        </ul>
+
+      </div>
+    </div>
+  </nav>
+</header>
+ <!--FIN HEADER + MENU NAVBAR -->
+
   <!-- banner de ofertas -->
   <div class="bannerOferta">
     <img src="../multimedia/ofertas.png" alt="banner de ofertas">
   </div>
   <!-- fin del banner -->
-<!-- BARRA DE NAVEGACION -->
-<section class="navOfertas">
-<nav class="nav">  
-  <ul class="nav-menu">
-        <li class="nav-menu-item">
-      <a href="../index.html" class="nav-menu-link nav-link">INICIO</a>
-    </li>
-    <li class="nav-menu-item">
-      <a href="./maspopulares.html" class="nav-menu-link nav-link">MAS POPULARES</a>
-    </li>
-    <li class="nav-menu-item">
-      <a href="./sininteres.html" class="nav-menu-link nav-link">PAGOS SIN INTERES</a>
-    </li>
-    <li class="nav-menu-item">
-      <a href="./outlet.html" class="nav-menu-link nav-link "
-        >OUTLET</a>
-    </li>
-  </ul>
-</nav>
-</section>
-<!-- FIN DE BARRA DE NAVEGACION -->
-  
+
   <!-- Tarjetas de productos -->
   <div class="title-cards">
   </div>
@@ -61,11 +77,14 @@
       <div class="contenido-card">
         <h4>Amplificador Vox Cambridge50 Nutube Celestion</h4>
         <p>VOX Cambridge50
-          Equipado una válvula Nutube, para una verdadera distorsión valvular, y una caja equipada con un parlante
+          Equipado una válvula Nutube, para una verdadera distorsión valvular, y una caja equipada con un
+          parlante
           Celestion de 12".
-          El amplificador tiene un diseño simple que le permite llegar fácilmente al sonido, o guardar tus presets
+          El amplificador tiene un diseño simple que le permite llegar fácilmente al sonido, o guardar tus
+          presets
           favoritos como preajustes.
-          Con 11 tipos de modelos de amplificador, 8 efectos integrados y un afinador integrado, este amplificador es
+          Con 11 tipos de modelos de amplificador, 8 efectos integrados y un afinador integrado, este
+          amplificador es
           perfecto para muchas aplicaciones y cualquier estilo de música.</p>
         <a href="https://www.altonmusic.com/MLA-898168984-amplificador-vox-cambridge50-nutube-celestion-_JM?searchVariation=68927494170#searchVariation=68927494170&position=2&search_layout=stack&type=item&tracking_id=8a44c99b-a906-4d8b-9f11-6928c40edb8a"
           target="_blank">Leer Màs</a>
@@ -82,7 +101,8 @@
         <p>Madarozzo Elegant G0030 Dreadnought
           Una impresionante fusión de diseño, función y protección para el músico exigente.
           Elección ideal para el músico que se inicia.
-          Su estilo único, colores, funcionalidad y características hacen de este modelo la funda que "deben tener"
+          Su estilo único, colores, funcionalidad y características hacen de este modelo la funda que "deben
+          tener"
           todos los guitarristas, excelente en calidad y precio.
         </p>
         <a href="https://www.altonmusic.com/MLA-903823132-funda-guitarra-acustica-madarozzo-elegant-g0030-dreadnought-_JM?searchVariation=72743138199#searchVariation=72743138199&position=4&search_layout=stack&type=item&tracking_id=8a44c99b-a906-4d8b-9f11-6928c40edb8a"
@@ -98,9 +118,11 @@
       <div class="contenido-card">
         <h4>Guitarra Eléctrica Les Paul Vintage V100 Hardware Dorado</h4>
         <p>Vintage V100
-          La Les Paul Vintage V100 en su sonido tiene el corazón y el alma de miles de conciertos y puedes sentirlo
+          La Les Paul Vintage V100 en su sonido tiene el corazón y el alma de miles de conciertos y puedes
+          sentirlo
           cuando lo tocas.
-          Estas guitarras fantásticas, totalmente equipadas con hardware y micrófonos Wilkinson están listas para el
+          Estas guitarras fantásticas, totalmente equipadas con hardware y micrófonos Wilkinson están listas
+          para el
           próximo concierto.</p>
         <a href="https://www.altonmusic.com/MLA-908149616-guitarra-electrica-les-paul-vintage-v100-hardware-dorado-_JM?searchVariation=76097611976#searchVariation=76097611976&position=5&search_layout=stack&type=item&tracking_id=8a44c99b-a906-4d8b-9f11-6928c40edb8a"
           target="_blank">Leer Màs</a>
@@ -136,6 +158,7 @@
           </div>
         </div>
   </footer>
+  <!-- FIN DE FOOTER -->
   <!-- iconos font awason -->
   <script src="https://kit.fontawesome.com/a4397840eb.js" crossorigin="anonymous"></script>
   <!-- Libreria popperJS x CDN -->
