--- a/alton_music/ofertas.html
+++ b/alton_music/ofertas.html
@@ -15,48 +15,48 @@
 <body>
   <!-- HEADER + MENU NAVBAR -->
   <header>
-  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e7f045;">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="../index.html">
-        <img class="logoDeOferta" src="../multimedia/alton-removeb.png" alt="logo de alton">
-      </a>
-      <h1 class="tituloDeOferta">ALTON MUSIC</h1>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./sininteres.html">Pagos sin Interes</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-              aria-expanded="false">
-              Mas Populares
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#">Guitarras</a></li>
-              <li><a class="dropdown-item" href="#">Baterias</a></li>
-              <li>
-                <hr class="dropdown-divider">
-              </li>
-              <li><a class="dropdown-item" href="#">Teclados</a></li>
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./outlet.html">OUTLET</a>
-          </li>
-        </ul>
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e7f045;">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="../index.html">
+          <img class="logoDeOferta" src="../multimedia/alton-removeb.png" alt="logo de alton">
+        </a>
+        <h1 class="tituloDeOferta">ALTON MUSIC</h1>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./sininteres.html">Pagos sin Interes</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Mas Populares
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="#">Guitarras</a></li>
+                <li><a class="dropdown-item" href="#">Baterias</a></li>
+                <li>
+                  <hr class="dropdown-divider">
+                </li>
+                <li><a class="dropdown-item" href="#">Teclados</a></li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./contacto.html">Contacto</a>
+            </li>
+          </ul>
 
+        </div>
       </div>
-    </div>
-  </nav>
-</header>
- <!--FIN HEADER + MENU NAVBAR -->
+    </nav>
+  </header> 
+  <!--FIN HEADER + MENU NAVBAR -->
 
   <!-- banner de ofertas -->
   <div class="bannerOferta">
@@ -72,7 +72,7 @@
       <figure>
         <a href="https://www.altonmusic.com/MLA-898168984-amplificador-vox-cambridge50-nutube-celestion-_JM?searchVariation=68927494170#searchVariation=68927494170&position=2&search_layout=stack&type=item&tracking_id=8a44c99b-a906-4d8b-9f11-6928c40edb8a"
           target="_blank">
-          <img src="../multimedia/ofertas/amplificador-vox.png"></a>
+          <img class="imgOfer1" src="../multimedia/ofertas/amplificador-vox.png"></a>
       </figure>
       <div class="contenido-card">
         <h4>Amplificador Vox Cambridge50 Nutube Celestion</h4>
@@ -94,7 +94,7 @@
       <figure>
         <a href="https://www.altonmusic.com/MLA-903823132-funda-guitarra-acustica-madarozzo-elegant-g0030-dreadnought-_JM?searchVariation=72743138199#searchVariation=72743138199&position=4&search_layout=stack&type=item&tracking_id=8a44c99b-a906-4d8b-9f11-6928c40edb8a"
           target="_blank">
-          <img src="../multimedia/ofertas/funda-guitarra.png"></a>
+          <img class="imgOfer2" src="../multimedia/ofertas/funda-guitarra.png"></a>
       </figure>
       <div class="contenido-card">
         <h4>Funda Guitarra Acústica Madarozzo Elegant G0030 Dreadnought</h4>
@@ -113,7 +113,7 @@
       <figure>
         <a href="https://www.altonmusic.com/MLA-908149616-guitarra-electrica-les-paul-vintage-v100-hardware-dorado-_JM?searchVariation=76097611976#searchVariation=76097611976&position=5&search_layout=stack&type=item&tracking_id=8a44c99b-a906-4d8b-9f11-6928c40edb8a"
           target="_blank">
-          <img src="../multimedia/ofertas/Guitar-LesPaul.png"></a>
+          <img class="imgOfer3" src="../multimedia/ofertas/Guitar-LesPaul.png"></a>
       </figure>
       <div class="contenido-card">
         <h4>Guitarra Eléctrica Les Paul Vintage V100 Hardware Dorado</h4>
