--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div>
       <a href="./index.html"><img class="logo" src="./multimedia/alton-removeb.png" alt="Logo de alton" /></a>
     </div>
-    <h1>Alton Music</h1>
+    <h1 class="tituloIndex">Alton Music</h1>
     <nav class="botonera">
       <ul>
         <li><a class="btnInicio" href="./alton_music/contacto.html">Contacto</a></li>
