--- a/alton_music/sininteres.html
+++ b/alton_music/sininteres.html
@@ -2,39 +2,67 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Alton Music</title>
-    <!-- Agregando BOOTSTRAP CDN -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css" />
-    <link rel="stylesheet" href="../css_sass/estilos.css">
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Alton Music</title>
+  <!-- Agregando BOOTSTRAP CDN -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="../css_sass/style.css">
 </head>
 
 <body>
-    <header>
-        <div>
-            <a href="../index.html"><img class="logo" src="../multimedia/alton-removeb.png" alt="Logo de alton" /></a>
+  <!-- HEADER + MENU NAVBAR -->
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e7f045;">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="../index.html">
+          <img class="logoDeOferta" src="../multimedia/alton-removeb.png" alt="logo de alton">
+        </a>
+        <h1 class="tituloDeOferta">ALTON MUSIC</h1>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./sininteres.html">Pagos sin Interes</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Mas Populares
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="#">Guitarras</a></li>
+                <li><a class="dropdown-item" href="#">Baterias</a></li>
+                <li>
+                  <hr class="dropdown-divider">
+                </li>
+                <li><a class="dropdown-item" href="#">Teclados</a></li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./contacto.html">Contacto</a>
+            </li>
+          </ul>
+
         </div>
-        <h1>Alton Music</h1>
-        <nav class="botonera">
-            <ul>
-                <li><a class="btnInicio" href="./contacto.html">Contacto</a></li>
-                <li><a class="btnInicio" href="../index.html">Inicio</a></li>
-            </ul>
-        </nav>
-    </header>
+      </div>
+    </nav>
+  </header> 
+  <!--FIN HEADER + MENU NAVBAR -->
 
     <!-- SECCIÓN SERVICIOS -->
     <section id="servicios">
-        <div class="contenedorImagen">
-            <img class="imagenEncabezadoOferta" src="../multimedia/Banner.jpg" alt="foto de instrumentos" />
+        <div class="sinInterImagen">
+            <img  src="../multimedia/Banner.jpg" class="img-fluid" alt="foto de instrumentos" />
         </div>
-
-
-
 
         <!-- Galeria de Ofertasrmanal -->
         <div class="tarjetaflex">
